[package]
name = "callendar_blitz"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
webbrowser = "1.2.1"
directories = "5"